Fix: Links of several actions associated to the same property are too close

--- a/trunk/OpenXava/web/style/portal.css
+++ b/trunk/OpenXava/web/style/portal.css
@@ -376,6 +376,10 @@ TD.list-title {
 	outline: none;
 }
 
+.ox-action-link {
+	margin-left: 7px;
+}
+
 .ox-help img {
 	border: 0;
 	padding-top: 5px;
